# tetanOS

./: .README.md.un~  .gitignore  .rust-toolchain.un~  README.md  README.md~
TetanOS/: .Cargo.toml.un~  .i386-tetanos.json.un~  Cargo.toml  Cargo.toml~  clean.sh  i386-tetanos.json
TetanOS/.cargo/: .config.toml.un~  config.toml
TetanOS/src/: .asm_read.rs.un~  .baremetal_shell.rs.un~  .dos_copy.rs.un~  .main.rs.un~  .printing.rs.un~  .shell.rs.un~  .vga_buffer.rs.un~  asm_read.rs~  dos_copy.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  main.rs~  printing.rs  serial.rs  shell.rs  vga_buffer.rs
TetanOS/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
tetanos_16/: Cargo.toml
tetanos_16/.cargo/: config.toml
tetanos_16/src/: main.rs
tetanos_kernel/: Makefile  boot.asm  ctest.c  ctest.s  disk.img  kern.asm
tetanos_kernel/rusttest/.cargo/: config
tetanos_kernel/rusttest/src/: main.rs
