[package]
name = "tetan_os"
version = "0.1.0"
edition = "2021" # TODO: maybe change
authors = [
          "Makoto Tomokiyo <mtomokiy@andrew.cmu.edu>",
          "David Barajas <dbarajas@andrew.cmu>",
          "Alby Penney <apenney@andrew.cmu.edu>"
          ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
bootloader = "0.9.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
# test-timeout-300
